--- a/GlobalQuakeServer/globalQuake.properties
+++ b/GlobalQuakeServer/globalQuake.properties
@@ -1,5 +1,5 @@
 #Fun fact: I've never felt an earthquake in my life
-#Sun Oct 22 11:32:16 GMT 2023
+#Sun Oct 22 15:18:52 CEST 2023
 displayTime=true
 oldEventsOpacity=100.0
 stationIntensityVisibilityZoomLevel=0.2
@@ -15,8 +15,8 @@ alertRegion=true
 alertGlobalMag=6.0
 selectedDateFormatIndex=0
 intensityScaleIndex=0
-reduceRevisions=true
 alertRegionMag=3.5
+reduceRevisions=true
 selectedEventColorIndex=0
 alertLocalDist=200.0
 use24HFormat=true
