--- a/GlobalQuakeAPI/pom.xml
+++ b/GlobalQuakeAPI/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.morce.GlobalQuake</groupId>
+        <groupId>xspanger.GlobalQuake</groupId>
         <artifactId>GlobalQuakeServer</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>org.example</groupId>
     <artifactId>GlobalQuakeAPI</artifactId>
 
     <properties>
