--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.morce.GlobalQuake</groupId>
+
+	<groupId>xspanger.GlobalQuake</groupId>
 	<artifactId>GlobalQuakeServer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>GlobalQuakeServerUI</module>
